Import of JHELWIG/Bot-BasicBot-Pluggable-Module-Gitbot-0.01.01 from CPAN.
gitpan-cpan-distribution: Bot-BasicBot-Pluggable-Module-Gitbot
gitpan-cpan-version:      0.01.01
gitpan-cpan-path:         JHELWIG/Bot-BasicBot-Pluggable-Module-Gitbot-0.01.01.tar.gz
gitpan-cpan-author:       JHELWIG
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 Revision history for Perl extension Bot-BasicBot-Pluggable-Module-Gitbot
 
+0.01.01  Mon, 22 Feb 2010 03:25:48 -0000 (Jacob Helwig <jhelwig@cpan.org>)
+     - Add a package line for the PAUSE indexer to find.
+
 0.01  Mon, 22 Feb 2010 02:21:17 -0000 (Jacob Helwig <jhelwig@cpan.org>)
      - Initial Commit
      - Initial 0.01 version of the module.
