Import of JHELWIG/Bot-BasicBot-Pluggable-Module-Gitbot-0.01.02 from CPAN.
gitpan-cpan-distribution: Bot-BasicBot-Pluggable-Module-Gitbot
gitpan-cpan-version:      0.01.02
gitpan-cpan-path:         JHELWIG/Bot-BasicBot-Pluggable-Module-Gitbot-0.01.02.tar.gz
gitpan-cpan-author:       JHELWIG
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Revision history for Perl extension Bot-BasicBot-Pluggable-Module-Gitbot
 
+0.01.02  Mon, 22 Feb 2010 06:00:38 -0000 (Jacob Helwig <jhelwig@cpan.org>)
+     - Switch to Module::Install.
+     - Remove automatic Twitter notifications from the ShipIt steps.
+     - Remove Build.PL from the MANIFEST.
+
 0.01.01  Mon, 22 Feb 2010 03:25:48 -0000 (Jacob Helwig <jhelwig@cpan.org>)
      - Add a package line for the PAUSE indexer to find.
 
