Import of JHELWIG/Bot-BasicBot-Pluggable-Module-Gitbot-0.01.03 from CPAN.
gitpan-cpan-distribution: Bot-BasicBot-Pluggable-Module-Gitbot
gitpan-cpan-version:      0.01.03
gitpan-cpan-path:         JHELWIG/Bot-BasicBot-Pluggable-Module-Gitbot-0.01.03.tar.gz
gitpan-cpan-author:       JHELWIG
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Revision history for Perl extension Bot-BasicBot-Pluggable-Module-Gitbot
 
+0.01.03  Mon, 22 Feb 2010 06:37:08 -0000 (Jacob Helwig <jhelwig@cpan.org>)
+     - Ignore .author file
+     - Re-generate a proper META.yml
+
 0.01.02  Mon, 22 Feb 2010 06:00:38 -0000 (Jacob Helwig <jhelwig@cpan.org>)
      - Switch to Module::Install.
      - Remove automatic Twitter notifications from the ShipIt steps.
