--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Revision history for Perl extension Bot-BasicBot-Pluggable-Module-Gitbot
 
+0.01.06  Tue, 02 Mar 2010 20:55:52 -0000 (Jacob Helwig <jhelwig@cpan.org>)
+     - Replace subtests with notes.
+     - Remove response when given something that looks like a SHA1, but can't be found.
+
 0.01.05  Sun, 28 Feb 2010 09:29:16 -0000 (Jacob Helwig <jhelwig@cpan.org>)
      - Add missing test requirements.
 
